# Quipay

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  commitlint.config.js  create_cicd_issues.sh  create_cicd_issues_tailored.sh  create_docs_issues.sh  create_user_docs_issues.sh  environments.toml  eslint.config.js  index.html  lh-desktop.json  lh-mobile.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  start.js  structured-audit-logging-system-design.md  structured-audit-logging-system-requirements.md  structured-audit-logging-system-tasks.md  structured-audit-logging-system.config.kiro  tsconfig.app.json  tsconfig.json  tsconfig.test.json  typedoc.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-review.yml  backend.yml  benchmarks.yml  blue-green-deploy.yml  build.yml  commitlint.yml  contracts.yml  dapp-ipfs.yml  deploy-testnet.yml  e2e-tests.yml  frontend-preview.yml  frontend.yml  gitleaks.yml  integration-tests.yml  nightly-fuzz.yml  outdated-scan.yml  security.yml
backend/: .env.example  .gitignore  AUDIT_LOGGING_COMPLETE.md  AUDIT_LOGGING_INTEGRATION.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_EXAMPLE.md  RATE_LIMITING_AND_VALIDATION.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  jest.config.js  package-lock.json  package.json
backend/src/: adminRouter.ts  ai.ts  analytics.ts  delivery.ts  discord.ts  index.ts  metrics.ts  slack.ts  stellarListener.ts  swagger.ts  syncer.ts  webhooks.ts
contracts/: QUIPAY_ERROR_IMPLEMENTATION_PLAN.md
contracts/automation_gateway/: Cargo.toml
contracts/automation_gateway/src/: lib.rs  test.rs
contracts/common/: Cargo.toml
contracts/common/src/: error.rs  lib.rs
contracts/dao_governance/: Cargo.toml
contracts/dao_governance/src/: lib.rs  test.rs
contracts/payroll_receipt/: Cargo.toml
contracts/payroll_stream/: BENCHMARKING.md  Cargo.toml
contracts/payroll_stream/src/: batch_cancel_test.rs  benchmarks.rs  duration_test.rs  extension_test.rs  integration_test.rs  lib.rs  pause_test.rs  proptest.rs  stream_extension.rs  stream_pause.rs  test.rs  upgrade_migration_test.rs  withdraw_proptest.rs
contracts/payroll_vault/: Cargo.toml
contracts/payroll_vault/proptest-regressions/: proptest.txt
contracts/payroll_vault/src/: fuzz_test.rs  kani_test.rs  lib.rs  proptest.rs  test.rs  upgrade_test.rs
contracts/workforce_registry/: Cargo.toml
deploy/: README.md
developer-hub/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
developer-hub/docs/: intro.md
docs/: API.md  CONTRACTS.md  DAO_TREASURY_SETUP.md  DEPLOYMENT.md  DESIGN_TOKENS.md  PRD.md  design.md  error-codes.md  research_summary.md
docs/adr/: 0000-template.md  ADR-005-stellar-network-selection.md  README.md
docs/runbooks/: blue-green-deployment.md  database-backup-recovery.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: payroll_stream_fuzz.rs  payroll_vault_fuzz.rs
infra/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/environments/: production.tfvars  staging.tfvars
playwright-report/: index.html
public/: robots.txt  sitemap.xml
scripts/: deploy.mjs  deploy_gateway.mjs  generate-social-previews.mjs  setup_branch_protection.sh  smoke_test.mjs  smoke_test_gateway.mjs  staging_testnet_smoke.mjs
src/: App.module.css  App.tsx  index.css  main.tsx
src/components/: BrandingSettings.tsx  BugReportModal.tsx  BulkStreamCreator.tsx  CollapsibleSection.module.css  CollapsibleSection.tsx  ConnectAccount.tsx  DashboardTable.tsx  EarningsDisplay.module.css  EarningsDisplay.tsx  EarningsForecast.tsx  EmptyState.module.css  EmptyState.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  FundAccountButton.tsx  GuessTheNumber.tsx  Helpcenter.tsx  LanguageSwitcher.tsx  NetworkHealthMonitor.tsx  NetworkPill.tsx  NotificationCenter.tsx  OnboardingTour.tsx  PayslipDownloadButton.tsx  PreflightCheckModal.tsx  StreamCreator.module.css  StreamCreator.tsx  StreamHistory.tsx  StreamProgress.css  StreamProgressCard.tsx  ThemeToggle.tsx  Tooltip.module.css  Tooltip.tsx  TransactionSimulationModal.tsx  WalletButton.tsx  WalletConnect.tsx  WithdrawButton.tsx  Wizard.module.css  Wizard.tsx
src/context/: ThemeContext.tsx
src/contracts/: payroll_stream.ts
src/hooks/: useAnalyticsData.ts  useBurnRateCalculator.ts  useExport.ts  useGlobalErrorCatcher.ts  useInfiniteScroll.ts  useNetworkAlerts.ts  useNotification.ts  usePayroll.ts  (+12 more)
tests/: README.md  dashboard.spec.ts  employer-onboarding.spec.ts  landing-page.spec.ts  stream-creation-advanced.spec.ts  stream-creation.spec.ts  visual-regression.spec.ts  worker-withdrawal.spec.ts
(+214 files in other folders)
