[package]
name = "payroll_stream"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
payroll_vault = { path = "../payroll_vault" }
payroll_receipt = { path = "../payroll_receipt" }
quipay_common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.5.0"
